<resources>
    <string name="app_name">First Practice</string>
    <string name="top_bar">Disease Diagnosis Management</string>
    <string name="title">Registration Form</string>
    <string name="medical">Medical Staff:</string>
    <string name="date">Date of birth:</string>
    <string name="enter_date">Enter Date of birth..</string>
    <string name="surname">Surname:</string>
    <string name="enter_name">Enter Surname</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="contact">Contact:</string>
    <string name="enter_contact">Enter Contact No..</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter Email...</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="btn">Submit</string>
    <string name="volume">Volume</string>
    <string name="choice">Choose all languages that you know</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="javascript">JavaScript</string>
    <string name="php">PHP</string>
    <string name="mysql">MySQL</string>
    <string name="subscribe">Subscribe to our news latter</string>
    <string name="enter_message">Enter your message</string>
    <string name="desc">Send Message</string>
</resources>